website/websites/u64q/code/meteor.4.scala.log

Fri, 25 Jan 2013 22:00:36 GMT

MAKE:
mv meteor.scala-4.scala meteor.scala
/usr/local/src/scala-2.10.0/bin/scalac -optimise -target:jvm-1.7 meteor.scala
meteor.scala:157: error: value findIndexOf is not a member of Array[BoardCell]
   def firstEmptyCellIndex() = cells.findIndexOf(c => c.isEmpty)
                                     ^
one error found
make: [meteor.scala-4.scala_run] Error 1 (ignored)
4.62s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.7.0_11/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.0/lib/scala-library.jar:/usr/local/src/scala-2.10.0/lib/akka-actors.jar:/usr/local/src/scala-2.10.0/lib/typesafe-config.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class meteor
